<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ver">


    <TextView
        android:id="@+id/tnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#002357"
        android:textSize="20sp"
        android:text="@string/name"
        ></TextView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@+id/tnome"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>

    <TextView
        android:id="@+id/tapelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textColor="#002357"
        android:textSize="20sp"
        android:layout_below="@+id/name"
        ></TextView>


    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tapelido"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>

    <TextView
        android:id="@+id/tmorada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#002357"
        android:textSize="20sp"
        android:layout_below="@+id/surname"
        ></TextView>
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tmorada"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>
    <TextView
        android:id="@+id/tprofissao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profession"
        android:textColor="#002357"
        android:textSize="20sp"
        android:layout_below="@+id/address"
        ></TextView>

    <TextView
        android:id="@+id/profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tprofissao"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>
    <TextView
        android:id="@+id/tgenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profession"
        android:textColor="#002357"
        android:textSize="20sp"
        android:text="@string/gender"></TextView>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tgenero"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>
    <TextView
        android:id="@+id/tcodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postal"
        android:textColor="#002357"
        android:textSize="20sp"
        android:layout_below="@+id/gender"
        ></TextView>

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tcodigo"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>

    <TextView
        android:id="@+id/tidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="#002357"
        android:textSize="20sp"
        android:layout_below="@+id/code"
        ></TextView>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tidade"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>


    <TextView
        android:id="@+id/tnumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_marginTop="-7dp"
        android:text="@string/phonenumber"
        android:textColor="#002357"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/numberphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tnumero"
        android:textColor="#000000"
        android:textSize="10sp"
        ></TextView>




</RelativeLayout>